@@ -1,14 +1,14 @@
 package com.sin.lineage.parser.listener;
 
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.lang.Assert;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.sin.lineage.antlr.clickhouse.ClickHouseParser;
 import com.sin.lineage.antlr.clickhouse.ClickHouseParserBaseListener;
-import com.sin.lineage.parser.enums.TableType;
 import com.sin.lineage.parser.exception.LineageException;
 import com.sin.lineage.parser.struct.Column;
 import com.sin.lineage.parser.struct.Statement;
-import com.sin.lineage.parser.struct.StatementType;
 import com.sin.lineage.parser.struct.Table;
 import com.sin.lineage.parser.struct.graph.Node;
 import com.sin.lineage.parser.struct.meta.TableMeta;
@@ -18,8 +18,10 @@ import org.jgrapht.alg.util.Pair;
 import org.jgrapht.graph.DefaultEdge;
 import org.jgrapht.graph.SimpleDirectedGraph;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -32,17 +34,35 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
 
     /**
      * 存储血缘的图
+     * <pre><code>
+     * 语句：
+     * select id from t_user
+     * 在图中的存储结构为：
+     * stmt0.id -> t_user.id
+     * </code></pre>
      */
-    protected final SimpleDirectedGraph<Node, DefaultEdge> g;
+    private final SimpleDirectedGraph<Node, DefaultEdge> g;
+
+    /**
+     * 存储语句间的作用域关系图
+     */
+    private final SimpleDirectedGraph<String, DefaultEdge> statementGraph;
 
     private Integer stmtIndex = 0;
+    private Integer columnSubqueryIndex = 1;
 
     private final Map<RuleContext, Statement> stmtMap = Maps.newHashMap();
+    private final Map<String, Statement> stmtNameMap = Maps.newHashMap();
 
     /**
      * 存储表名和表拥有的列的映射关系
      */
     private final Map<String, List<String>> tableMap = Maps.newHashMap();
+
+    /**
+     * 真实表
+     */
+    private final List<String> realTables = Lists.newArrayList();
 
     /**
      * 存储血缘的目标表名，默认为stmt0，如果有insert，则是插入表的名称
@@ -51,7 +71,13 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
 
     public ClickHouseLineageParserListener(List<TableMeta> tableMetas) {
         g = new SimpleDirectedGraph<>(DefaultEdge.class);
-        tableMetas.forEach(tableMeta -> tableMap.put(tableMeta.getName(), tableMeta.getColumns()));
+        statementGraph = new SimpleDirectedGraph<>(DefaultEdge.class);
+        if (CollUtil.isNotEmpty(tableMetas)) {
+            tableMetas.forEach(tableMeta -> {
+                tableMap.put(tableMeta.getName(), tableMeta.getColumns());
+                realTables.add(tableMeta.getName());
+            });
+        }
     }
 
     /**
@@ -68,11 +94,10 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
      */
     @Override
     public void enterInsertStmt(ClickHouseParser.InsertStmtContext ctx) {
-        Statement statement = new Statement(StatementType.INSERT);
+        Statement statement = new Statement();
 
         // 解析insert表
         Table table = parseTableIdentifier(ctx.tableIdentifier());
-        table.setType(TableType.REAL_TABLE);
         statement.setSinkTable(table);
         sinkTableName = table.getName();
 
@@ -81,13 +106,16 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
 
         // 添加source表
         if (ctx.dataClause() instanceof ClickHouseParser.DataClauseSelectContext instanceCtx) {
-            Table sourceTable = new Table(generateStmtName(), TableType.TMP_TABLE);
-            Statement srcStatement = new Statement(StatementType.SELECT);
+            Statement srcStatement = new Statement();
+            Table sourceTable = new Table(generateStmtName());
             srcStatement.setSinkTable(sourceTable);
 
             statement.addSourceTable(sourceTable);
             stmtMap.put(ctx, statement);
             stmtMap.put(instanceCtx.topSelectStmt(), srcStatement);
+
+            stmtNameMap.put(statement.getStatementName(), statement);
+            stmtNameMap.put(srcStatement.getStatementName(), srcStatement);
         }
     }
 
@@ -96,7 +124,11 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
      */
     @Override
     public void enterCteStmt(ClickHouseParser.CteStmtContext ctx) {
-        getStatementOfTopContext(ctx.topSelectStmt()).setSinkTable(new Table(generateStmtName(), TableType.TMP_TABLE));
+        // 先设置CTE语句的 with .. select ...的 select名称
+        Statement statement = getStatementOfTopContext(ctx);
+        if (statement.getSinkTable() == null) {
+            statement.setSinkTable(new Table(generateStmtName()));
+        }
     }
 
     /**
@@ -110,7 +142,7 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
         }
 
         Table sourceTable = statement.getSourceTable().get(0);
-        List<String> srcColumns = tableMap.get(sourceTable.getName());
+        List<String> srcColumns = tableMap.get(sourceTable.fullName());
 
         // insert into没有定义列的情况
         List<Column> stmtColumns = statement.getColumns();
@@ -120,7 +152,7 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
                 Column column = new Column(v);
                 column.setIdentifier(sourceTable.getName());
                 return column;
-            }).collect(Collectors.toList());
+            }).toList();
             stmtColumns.addAll(insertColumns);
         }
 
@@ -145,13 +177,20 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
 
         // 添加sink表
         if (statement.getSinkTable() == null) {
-            statement.setSinkTable(new Table(generateStmtName(), TableType.TMP_TABLE));
+            statement.setSinkTable(new Table(generateStmtName()));
         }
+        stmtNameMap.put(statement.getStatementName(), statement);
+
+        // 处理语句图
+        processStatementGraph(ctx);
 
         // 解析列
-        ctx.columnExprList().columnsExpr().stream()
-                .flatMap(v -> parseColumnsExpr(v).stream())
-                .forEach(statement::addColumn);
+        List<Column> columns = parseColumnExprList(ctx.columnExprList());
+        if (isUnionStmt(ctx)) {
+            processUnionStmt(columns, statement);
+        } else {
+            statement.addColumns(columns);
+        }
     }
 
     /**
@@ -161,25 +200,14 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
     public void exitSelectStmt(ClickHouseParser.SelectStmtContext ctx) {
         Statement statement = getStatementOfTopContext(ctx);
 
+        // 追溯来源表
+        traceSourceTable(statement);
+
         List<Column> expandColumns = Lists.newArrayList();
         statement.getColumns().forEach(col -> {
             // 拓展*列为具体的列
             if ("*".equals(col.getName())) {
-                if (col.getIdentifier() != null) {
-                    Table srcTable = statement.getSourceTable().stream()
-                            .filter(v -> v.getAlias() == null ? v.getName().equals(col.getIdentifier())
-                                    : v.getAlias().equals(col.getIdentifier()))
-                            .findFirst()
-                            .orElseThrow(() -> new LineageException(String.format("找不到列标识符 %s 对应的表", col.getIdentifier())));
-                    tableMap.get(srcTable.getName()).stream()
-                            .map(v -> new Column(col.getIdentifier(), v))
-                            .forEach(expandColumns::add);
-                } else {
-                    statement.getSourceTable()
-                            .forEach(srcTable -> tableMap.get(srcTable.getName()).stream()
-                                    .map(srcCol -> new Column(srcTable.getName(), srcCol))
-                                    .forEach(expandColumns::add));
-                }
+                expandStarColumn(col, statement, expandColumns);
             } else {
                 expandColumns.add(col);
             }
@@ -190,7 +218,7 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
         if (!tableMap.containsKey(statement.getSinkTable().getName())) {
             List<String> columns = expandColumns.stream()
                     .map(Column::getName)
-                    .collect(Collectors.toList());
+                    .toList();
             tableMap.put(statement.getSinkTable().getName(), columns);
         }
 
@@ -198,16 +226,247 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
         parseColumnLineage(statement);
     }
 
-    private void parseColumnLineage(Statement statement) {
-        statement.getColumns().forEach(column -> statement.getSourceTable().forEach(sourceTable -> {
-            // 获取来源表拥有的列
-            List<String> columns = tableMap.getOrDefault(sourceTable.getName(), Lists.newArrayList());
-            if (columns.contains(column.getName())) {
-                Node sourceNode = new Node(statement.getSinkTable().getName(), column.getName());
-                Node targetNode = new Node(sourceTable.getName(), column.getName());
-                Graphs.addEdgeWithVertices(g, sourceNode, targetNode);
+    /**
+     * 处理union语句
+     */
+    private void processUnionStmt(List<Column> columns, Statement statement) {
+        if (!statement.getColumns().isEmpty()) {
+            // 使用第一个select的列作为别名
+            Assert.isTrue(statement.getColumns().size() == columns.size(), "union语句中select的列数不一致");
+            for (int i = 0; i < statement.getColumns().size(); i++) {
+                Column column = columns.get(i);
+                if (CollUtil.isEmpty(column.getSourceColumns())) {
+                    Column result = new Column(column.getIdentifier(), column.getName());
+                    result.setIsSubquery(column.getIsSubquery());
+                    column.addSourceColumn(result);
+                }
+                column.setIdentifier(null);
+                column.setName(statement.getColumns().get(i).getName());
             }
-        }));
+        }
+        statement.setColumns(columns);
+
+        // 清理上一个select的表信息
+        statement.getSourceTable().clear();
+    }
+
+    /**
+     * 判断是否属于union语句
+     */
+    private boolean isUnionStmt(ClickHouseParser.SelectStmtContext ctx) {
+        RuleContext parent = ctx.getParent();
+        while (parent != null) {
+            if (parent instanceof ClickHouseParser.SelectUnionStmtContext) {
+                return true;
+            }
+
+            if (parent instanceof ClickHouseParser.TopSelectStmtContext) {
+                return false;
+            }
+
+            parent = parent.getParent();
+        }
+
+        return false;
+    }
+
+    /**
+     * 追溯来源表
+     */
+    private void traceSourceTable(Statement currentStatement) {
+        List<Table> list = currentStatement.getSourceTable().stream()
+                .map(table -> {
+                    // 先从真实表中找
+                    if (realTables.contains(table.getName())) {
+                        return table.copy();
+                    }
+
+                    if (table.getAlias() != null) {
+                        // 在从下一层作用域中找是子查询的表
+                        Table result = findTableFromSubStatement(table.getName(), currentStatement);
+                        if (result != null) {
+                            result.setAlias(table.getAlias());
+                            return result;
+                        }
+
+                        Table result2 = findTableOfQueryScope(table.getName(), currentStatement);
+                        result2.setAlias(table.getAlias());
+                        return result2;
+                    }
+
+                    Table result = findTableFromSubStatement(table.getName(), currentStatement);
+                    if (result != null) {
+                        return result;
+                    }
+
+                    // 从作用域中找
+                    return findTableOfQueryScope(table.getName(), currentStatement);
+                })
+                .collect(Collectors.toList());
+        currentStatement.setSourceTable(list);
+    }
+
+    /**
+     * 从子statement中找到表
+     */
+    private Table findTableFromSubStatement(String tableName, Statement currentStatement) {
+        List<String> statementNames = Graphs.predecessorListOf(statementGraph, currentStatement.getStatementName());
+        for (String statementName : statementNames) {
+            Statement statement = getStatementByName(statementName);
+
+            Table sinkTable = statement.getSinkTable();
+            if (Objects.equals(sinkTable.getName(), tableName) || Objects.equals(sinkTable.getAlias(), tableName)) {
+                return statement.getSinkTable().copy();
+            }
+        }
+
+        return null;
+    }
+
+    /**
+     * 从父statement的子statement中查找表
+     */
+    private Table findTableOfQueryScope(String tableName, Statement currentStatement) {
+        List<String> parents = Graphs.successorListOf(statementGraph, currentStatement.getStatementName());
+        if (parents.isEmpty()) {
+            throw new LineageException("未在查询作用域中找到对应的表 " + tableName);
+        }
+
+        // 从上一层作用域中查找
+        String parentName = parents.get(0);
+        List<String> subStmtList = Graphs.predecessorListOf(statementGraph, parentName);
+
+        for (String subStmtName : subStmtList) {
+            if (Objects.equals(subStmtName, currentStatement.getStatementName())) {
+                continue;
+            }
+
+            Statement subStmt = getStatementByName(subStmtName);
+            if (Objects.equals(tableName, subStmt.getSinkTable().getAlias())) {
+                return subStmt.getSinkTable().copy();
+            }
+        }
+
+        // 找不到继续往上一层作用域查找
+        return findTableOfQueryScope(tableName, getStatementByName(parentName));
+    }
+
+    /**
+     * 通过名称获取Statement
+     */
+    private Statement getStatementByName(String name) {
+        Statement result = stmtNameMap.get(name);
+        if (result == null) {
+            throw new IllegalArgumentException(String.format("获取%s的Statement失败", name));
+        }
+
+        return result;
+    }
+
+    /**
+     * 拓展*列，将*列展开成具体的列
+     */
+    private void expandStarColumn(Column starColumn, Statement statement, List<Column> expandColumns) {
+        if (starColumn.getIdentifier() != null) {
+            Table srcTable = statement.getSourceTable().stream()
+                    .filter(v -> v.getAlias() == null ? v.getName().equals(starColumn.getIdentifier())
+                            : v.getAlias().equals(starColumn.getIdentifier()))
+                    .findFirst()
+                    .orElseThrow(() -> new LineageException(String.format("找不到列标识符 %s 对应的表", starColumn.getIdentifier())));
+            tableMap.getOrDefault(srcTable.getName(), Collections.emptyList()).stream()
+                    .map(v -> new Column(starColumn.getIdentifier(), v))
+                    .forEach(expandColumns::add);
+        } else {
+            statement.getSourceTable()
+                    .forEach(srcTable -> tableMap.getOrDefault(srcTable.getName(), Collections.emptyList()).stream()
+                            .map(srcCol -> new Column(srcTable.getName(), srcCol))
+                            .forEach(expandColumns::add));
+        }
+    }
+
+    /**
+     * 解析列血缘
+     */
+    private void parseColumnLineage(Statement statement) {
+        statement.getColumns().forEach(column -> {
+            // 处理列是子查询的情况
+            if (column.getIsSubquery()) {
+                parseLineageOfColumnSubquery(statement, column);
+                return;
+            }
+
+            if (CollUtil.isEmpty(column.getSourceColumns())) {
+                processSingleSource(statement, column, column);
+            } else {
+                column.getSourceColumns().forEach(srcColumn -> processSingleSource(statement, srcColumn, column));
+            }
+        });
+    }
+
+    /**
+     * 解析列子查询的血缘
+     */
+    private void parseLineageOfColumnSubquery(Statement statement, Column subqueryColumn) {
+        Statement subqueryStatement = stmtMap.values().stream()
+                .filter(v -> Objects.equals(subqueryColumn.getName(), v.getSinkTable().getAlias()))
+                .findFirst()
+                .orElseThrow(() ->
+                        new LineageException(String.format("找不到列%s对应的子查询statement", subqueryColumn.getName())));
+        addLineageEdge(statement.getSinkTable(), subqueryColumn, subqueryStatement.getSinkTable(), subqueryStatement.getColumns().get(0));
+    }
+
+    /**
+     * 处理单个来源列到目标列的映射关系
+     */
+    private void processSingleSource(Statement statement, Column sourceColumn, Column targetColumn) {
+        if (sourceColumn.getIsSubquery()) {
+            Statement subqueryStatement = stmtMap.values().stream()
+                    .filter(v -> Objects.equals(sourceColumn.getName(), v.getSinkTable().getAlias()))
+                    .findFirst()
+                    .orElseThrow(() ->
+                            new LineageException(String.format("找不到列%s对应的子查询statement", sourceColumn.getName())));
+            addLineageEdge(statement.getSinkTable(), targetColumn, subqueryStatement.getSinkTable(), subqueryStatement.getColumns().get(0));
+            return;
+        }
+
+        Table readTable = sourceColumn.getIdentifier() != null
+                ? findTableByIdentifier(statement, sourceColumn.getIdentifier())
+                : findTableByColumnName(statement, sourceColumn.getName());
+
+        if (Objects.nonNull(readTable)) {
+            addLineageEdge(statement.getSinkTable(), targetColumn, readTable, sourceColumn);
+        }
+    }
+
+    /**
+     * 根据标识符查找表
+     */
+    private Table findTableByIdentifier(Statement statement, String identifier) {
+        return statement.getSourceTable().stream()
+                .filter(v -> identifier.equals(v.getAlias()) || identifier.equals(v.getName()))
+                .findFirst()
+                .orElseThrow(() ->
+                        new IllegalArgumentException(String.format("找不到标识符%s对应的读表", identifier)));
+    }
+
+    /**
+     * 根据列名查找表
+     */
+    private Table findTableByColumnName(Statement statement, String columnName) {
+        return statement.getSourceTable().stream()
+                .filter(v -> tableMap.getOrDefault(v.getName(), Collections.emptyList())
+                        .contains(columnName))
+                .findFirst()
+                .orElse(null);
+    }
+
+    /**
+     * 添加列级血缘关系到图结构
+     */
+    private void addLineageEdge(Table sinkTable, Column targetColumn, Table readTable, Column sourceColumn) {
+        Node stmtNode = new Node(sinkTable.getName(), targetColumn.getName());
+        Node readNode = new Node(readTable.getName(), sourceColumn.getName());
+        Graphs.addEdgeWithVertices(g, stmtNode, readNode);
     }
 
     /**
@@ -241,22 +500,19 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
      * </pre>
      */
     private List<Table> parseJoinExpr(ClickHouseParser.JoinExprContext ctx) {
-        if (ctx instanceof ClickHouseParser.JoinExprOpContext) {
-            ClickHouseParser.JoinExprOpContext instanceCtx = (ClickHouseParser.JoinExprOpContext) ctx;
+        if (ctx instanceof ClickHouseParser.JoinExprOpContext instanceCtx) {
             return instanceCtx.joinExpr().stream()
                     .flatMap(v -> parseJoinExpr(v).stream())
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        if (ctx instanceof ClickHouseParser.JoinExprCrossOpContext) {
-            ClickHouseParser.JoinExprCrossOpContext instanceCtx = (ClickHouseParser.JoinExprCrossOpContext) ctx;
+        if (ctx instanceof ClickHouseParser.JoinExprCrossOpContext instanceCtx) {
             return instanceCtx.joinExpr().stream()
                     .flatMap(v -> parseJoinExpr(v).stream())
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        if (ctx instanceof ClickHouseParser.JoinExprTableContext) {
-            ClickHouseParser.JoinExprTableContext instanceCtx = (ClickHouseParser.JoinExprTableContext) ctx;
+        if (ctx instanceof ClickHouseParser.JoinExprTableContext instanceCtx) {
             Table table = parseTableExpr(instanceCtx.tableExpr());
             if (table == null) {
                 return Lists.newArrayList();
@@ -265,33 +521,68 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
             return Lists.newArrayList(table);
         }
 
-        if (ctx instanceof ClickHouseParser.JoinExprParensContext) {
-            ClickHouseParser.JoinExprParensContext instanceCtx = (ClickHouseParser.JoinExprParensContext) ctx;
+        if (ctx instanceof ClickHouseParser.JoinExprParensContext instanceCtx) {
             return parseJoinExpr(instanceCtx.joinExpr());
         }
 
-        return Lists.newArrayList();
+        return Collections.emptyList();
     }
 
     private Statement getStatementOfTopContext(RuleContext ctx) {
         RuleContext parent = ctx;
         while (parent != null) {
             if (parent instanceof ClickHouseParser.TopSelectStmtContext) {
-                // 判断是否是cte语句
+                // 判断是否是cte语句的item（即namedQuery）
                 ClickHouseParser.NamedQueryContext namedQueryContext = getNamedQueryCtxOfCte(parent);
                 if (namedQueryContext != null) {
-                    Statement result = stmtMap.computeIfAbsent(parent, v -> new Statement(StatementType.SELECT));
-                    result.setSinkTable(new Table(namedQueryContext.name.getText(), TableType.TMP_TABLE));
+                    Statement result = stmtMap.computeIfAbsent(parent, v -> new Statement());
+                    if (result.getSinkTable() == null) {
+                        Table sinkTable = new Table(generateStmtName());
+                        sinkTable.setAlias(namedQueryContext.name.getText());
+                        result.setSinkTable(sinkTable);
+                    }
+
                     return result;
                 }
 
-                return stmtMap.computeIfAbsent(parent, v -> new Statement(StatementType.SELECT));
+                return stmtMap.computeIfAbsent(parent, v -> new Statement());
             }
 
             parent = parent.getParent();
         }
 
         throw new IllegalArgumentException("获取Statement失败");
+    }
+
+    private ClickHouseParser.TopSelectStmtContext getTopSelectStmtCtx(RuleContext ctx) {
+        RuleContext parent = ctx.parent;
+        while (parent != null) {
+            if (parent instanceof ClickHouseParser.TopSelectStmtContext instanceCtx) {
+                return instanceCtx;
+            }
+
+            parent = parent.getParent();
+        }
+
+        return null;
+    }
+
+    /**
+     * 处理查询的拓扑关系图
+     */
+    private void processStatementGraph(ClickHouseParser.SelectStmtContext ctx) {
+        // 获取当前ctx的topSelectContext
+        ClickHouseParser.TopSelectStmtContext currentScope = getTopSelectStmtCtx(ctx);
+        Statement currentStmt = getStatementOfTopContext(currentScope);
+
+        // 获取topSelectStmtCtx的父TopSelectStmtContext
+        assert currentScope != null;
+        ClickHouseParser.TopSelectStmtContext parentScope = getTopSelectStmtCtx(currentScope);
+        // 建立拓扑关系
+        if (parentScope != null) {
+            Graphs.addEdgeWithVertices(statementGraph, currentStmt.getStatementName(),
+                    getStatementOfTopContext(parentScope).getStatementName());
+        }
     }
 
     private ClickHouseParser.NamedQueryContext getNamedQueryCtxOfCte(RuleContext ctx) {
@@ -313,7 +604,14 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
         }
 
         return ctx.nestedIdentifier().stream()
-                .map(v -> new Column(v.getText()))
+                .map(v -> removeDialect(new Column(v.getText())))
+                .toList();
+    }
+
+    private List<Column> parseColumnExprList(ClickHouseParser.ColumnExprListContext ctx) {
+        return ctx.columnsExpr().stream()
+                .map(this::parseColumnsExpr)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toList());
     }
 
@@ -321,38 +619,261 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
      * <pre>
      * columnsExpr
      *     : (tableIdentifier DOT)? ASTERISK  # ColumnsExprAsterisk
-     *     | LPAREN selectUnionStmt RPAREN    # ColumnsExprSubquery
+     *     | LPAREN topSelectStmt RPAREN    # ColumnsExprSubquery
      *     // NOTE: asterisk and subquery goes before |columnExpr| so that we can mark them as multi-column expressions.
      *     | columnExpr                       # ColumnsExprColumn
      *     ;
      * </pre>
      */
-    private List<Column> parseColumnsExpr(ClickHouseParser.ColumnsExprContext ctx) {
-        if (ctx instanceof ClickHouseParser.ColumnsExprAsteriskContext) {
-            ClickHouseParser.ColumnsExprAsteriskContext instanceCtx = (ClickHouseParser.ColumnsExprAsteriskContext) ctx;
-            Column column = new Column("*");
+    private Column parseColumnsExpr(ClickHouseParser.ColumnsExprContext ctx) {
+        if (ctx instanceof ClickHouseParser.ColumnsExprAsteriskContext instanceCtx) {
+            Column result = new Column("*");
             if (instanceCtx.tableIdentifier() != null) {
                 Table table = parseTableIdentifier(instanceCtx.tableIdentifier());
-                column.setIdentifier(table.getName());
+                result.setIdentifier(table.getName());
             }
 
-            return Lists.newArrayList(column);
+            return removeDialect(result);
         }
 
-        if (ctx instanceof ClickHouseParser.ColumnsExprColumnContext) {
-            return parseColumnExpr(((ClickHouseParser.ColumnsExprColumnContext) ctx).columnExpr());
+        if (ctx instanceof ClickHouseParser.ColumnsExprSubqueryContext instanceCtx) {
+            Statement statement = getStatementOfTopContext(instanceCtx.topSelectStmt());
+            Table sinkTable = new Table(generateStmtName());
+            sinkTable.setAlias(generateColumnSubquery());
+            statement.setSinkTable(sinkTable);
+            Column result = new Column(sinkTable.getAlias());
+            result.setIsSubquery(true);
+
+            return (result);
         }
-        return Lists.newArrayList();
+
+        if (ctx instanceof ClickHouseParser.ColumnsExprColumnContext instanceCtx) {
+            Column result = parseColumnExpr(instanceCtx.columnExpr());
+            if (Objects.isNull(result)) {
+                return null;
+            }
+            return removeDialect(result);
+        }
+
+        return null;
     }
 
-    private List<Column> parseColumnExpr(ClickHouseParser.ColumnExprContext ctx) {
-        if (ctx instanceof ClickHouseParser.ColumnExprIdentifierContext) {
-            ClickHouseParser.ColumnExprIdentifierContext implCtx = (ClickHouseParser.ColumnExprIdentifierContext) ctx;
-            String name = implCtx.columnIdentifier().nestedIdentifier().getText();
-            return Lists.newArrayList(new Column(name));
+    private Column parseColumnExpr(ClickHouseParser.ColumnExprContext ctx) {
+        if (ctx instanceof ClickHouseParser.ColumnExprCaseContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
         }
 
-        throw new IllegalArgumentException("TODO");
+        if (ctx instanceof ClickHouseParser.ColumnExprCastContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprExtractContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprIntervalContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprSubstringContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprTrimContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprWinFunctionContext instanceCtx) {
+            if (instanceCtx.columnExprList() == null) {
+                return null;
+            }
+
+
+            Column result = new Column(instanceCtx.getText());
+            parseColumnExprList(instanceCtx.columnExprList()).forEach(v -> result.addSourceColumns(getAllSourceColumns(v)));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprWinFunctionTargetContext instanceCtx) {
+            if (instanceCtx.columnExprList() == null) {
+                return null;
+            }
+
+            Column result = new Column(instanceCtx.getText());
+            parseColumnExprList(instanceCtx.columnExprList()).forEach(v -> result.addSourceColumns(getAllSourceColumns(v)));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprFunctionContext instanceCtx) {
+            return parseColumnExprFunction(instanceCtx);
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprArrayAccessContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprTupleAccessContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprNegateContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprPrecedence1Context instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprPrecedence2Context instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprPrecedence3Context instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprIsNullContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprNotContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprAndContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprOrContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprBetweenContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprTernaryOpContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExpr().forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnExpr(v))));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprAliasContext instanceCtx) {
+            String alias = instanceCtx.alias() != null ? instanceCtx.alias().getText() : instanceCtx.identifier().getText();
+            Column result = new Column(alias);
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprSubqueryContext instanceCtx) {
+            Statement statement = getStatementOfTopContext(instanceCtx.topSelectStmt());
+            Table sinkTable = new Table(generateStmtName());
+            sinkTable.setAlias(generateColumnSubquery());
+            statement.setSinkTable(sinkTable);
+            Column result = new Column(sinkTable.getAlias());
+            result.setIsSubquery(true);
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprParensContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            result.addSourceColumns(getAllSourceColumns(parseColumnExpr(instanceCtx.columnExpr())));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprTupleContext instanceCtx) {
+            Column result = new Column(instanceCtx.getText());
+            instanceCtx.columnExprList().columnsExpr().stream()
+                    .map(this::parseColumnsExpr)
+                    .filter(Objects::nonNull)
+                    .forEach(v -> result.addSourceColumns(getAllSourceColumns(v)));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprArrayContext instanceCtx) {
+            if (instanceCtx.columnExprList() == null) {
+                return null;
+            }
+
+            Column result = new Column(instanceCtx.getText());
+            parseColumnExprList(instanceCtx.columnExprList()).forEach(v -> result.addSourceColumns(getAllSourceColumns(v)));
+            return result;
+        }
+
+        if (ctx instanceof ClickHouseParser.ColumnExprIdentifierContext instanceCtx) {
+            String name = instanceCtx.columnIdentifier().nestedIdentifier().getText();
+            Column column = new Column(name);
+            if (instanceCtx.columnIdentifier().tableIdentifier() != null) {
+                column.setIdentifier(instanceCtx.columnIdentifier().tableIdentifier().identifier().getText());
+            }
+            return column;
+        }
+
+        return null;
+    }
+
+    /**
+     * <pre>
+     *     identifier (LPAREN columnExprList? RPAREN)? LPAREN DISTINCT? columnArgList? RPAREN  # ColumnExprFunction
+     * </pre>
+     */
+    private Column parseColumnExprFunction(ClickHouseParser.ColumnExprFunctionContext ctx) {
+        Column result = new Column(ctx.getText());
+        if (ctx.columnArgList() != null) {
+            ctx.columnArgList().columnArgExpr().forEach(v -> result.addSourceColumns(parseColumnArgExpr(v)));
+        }
+
+        if (ctx.columnExprList() != null) {
+            ctx.columnExprList().columnsExpr()
+                    .forEach(v -> result.addSourceColumns(getAllSourceColumns(parseColumnsExpr(v))));
+        }
+        return result;
+    }
+
+    private List<Column> parseColumnArgExpr(ClickHouseParser.ColumnArgExprContext ctx) {
+        if (ctx.columnExpr() != null) {
+            return Lists.newArrayList(getAllSourceColumns(parseColumnExpr(ctx.columnExpr())));
+        }
+
+        List<Column> result = Lists.newArrayList();
+        ctx.columnLambdaExpr().identifier().forEach(v -> result.add(new Column(v.getText())));
+        result.addAll(getAllSourceColumns(parseColumnExpr(ctx.columnLambdaExpr().columnExpr())));
+
+        return result;
     }
 
     /**
@@ -366,31 +887,21 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
      * </pre>
      */
     private Table parseTableExpr(ClickHouseParser.TableExprContext ctx) {
-        if (ctx instanceof ClickHouseParser.TableExprIdentifierContext) {
-            ClickHouseParser.TableExprIdentifierContext instanceCtx = (ClickHouseParser.TableExprIdentifierContext) ctx;
+        if (ctx instanceof ClickHouseParser.TableExprIdentifierContext instanceCtx) {
             return parseTableIdentifier(instanceCtx.tableIdentifier());
         }
 
         // 未解析 TableExprFunction
 
-        if (ctx instanceof ClickHouseParser.TableExprSubqueryContext) {
-            ClickHouseParser.TableExprSubqueryContext instanceCtx = (ClickHouseParser.TableExprSubqueryContext) ctx;
-            Statement statement = new Statement(StatementType.SELECT);
-            String tableName;
-            if (instanceCtx.getParent() != null && instanceCtx.getParent() instanceof ClickHouseParser.TableExprAliasContext) {
-                ClickHouseParser.TableExprAliasContext parent = (ClickHouseParser.TableExprAliasContext) instanceCtx.getParent();
-                tableName = parent.alias() == null ? parent.identifier().getText() : parent.alias().getText();
-            } else {
-                tableName = generateStmtName();
-            }
-            Table result = new Table(tableName, TableType.TMP_TABLE);
+        if (ctx instanceof ClickHouseParser.TableExprSubqueryContext instanceCtx) {
+            Statement statement = new Statement();
+            Table result = new Table(generateStmtName());
             statement.setSinkTable(result);
-            stmtMap.put(instanceCtx.selectUnionStmt(), statement);
+            stmtMap.put(instanceCtx.topSelectStmt(), statement);
             return result;
         }
 
-        if (ctx instanceof ClickHouseParser.TableExprAliasContext) {
-            ClickHouseParser.TableExprAliasContext instanceCtx = (ClickHouseParser.TableExprAliasContext) ctx;
+        if (ctx instanceof ClickHouseParser.TableExprAliasContext instanceCtx) {
             String tableAlias = instanceCtx.alias() == null ? instanceCtx.identifier().getText() : instanceCtx.alias().getText();
             Table result = parseTableExpr(instanceCtx.tableExpr());
             result.setAlias(tableAlias);
@@ -411,10 +922,84 @@ public class ClickHouseLineageParserListener extends ClickHouseParserBaseListene
             result.setDbName(ctx.databaseIdentifier().getText());
         }
 
-        return result;
+        return removeDialect(result);
     }
 
     private String generateStmtName() {
         return "stmt" + stmtIndex++;
+    }
+
+    private String generateColumnSubquery() {
+        return "_subquery_" + columnSubqueryIndex++;
+    }
+
+    private List<Column> getAllSourceColumns(Column parent) {
+        List<Column> result = Lists.newArrayList();
+        if (parent != null) {
+            getAllSourceColumns(parent, result);
+        }
+        return result;
+    }
+
+    private void getAllSourceColumns(Column parent, List<Column> sourceColumns) {
+        if (CollUtil.isEmpty(parent.getSourceColumns())) {
+            sourceColumns.add(parent);
+            return;
+        }
+
+        parent.getSourceColumns().forEach(v -> getAllSourceColumns(v, sourceColumns));
+    }
+
+    /**
+     * 移除方言
+     */
+    private Column removeDialect(Column column) {
+        if (Objects.isNull(column)) {
+            return null;
+        }
+
+        if (Objects.nonNull(column.getName())) {
+            column.setName(removeDialect(column.getName()));
+        }
+
+        if (Objects.nonNull(column.getIdentifier())) {
+            column.setIdentifier(removeDialect(column.getIdentifier()));
+        }
+
+        if (CollUtil.isNotEmpty(column.getSourceColumns())) {
+            column.getSourceColumns().forEach(this::removeDialect);
+        }
+
+        return column;
+    }
+
+    /**
+     * 移除方言
+     */
+    private Table removeDialect(Table table) {
+        if (Objects.isNull(table)) {
+            return null;
+        }
+
+        if (Objects.nonNull(table.getDbName())) {
+            table.setDbName(removeDialect(table.getDbName()));
+        }
+
+        if (Objects.nonNull(table.getName())) {
+            table.setName(removeDialect(table.getName()));
+        }
+
+        if (Objects.nonNull(table.getAlias())) {
+            table.setAlias(removeDialect(table.getAlias()));
+        }
+
+        return table;
+    }
+
+    /**
+     * 移除方言
+     */
+    private String removeDialect(String name) {
+        return name.replace("`", "");
     }
 }
